--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1055,6 +1055,46 @@ section {
   margin-bottom: 0;
 }
 
+
+/*--------------------------------------------------------------
+# Cta
+--------------------------------------------------------------*/
+.cta {
+  background: linear-gradient(rgba(66, 84, 81, 0.5), rgba(43, 56, 54, 0.5)), url("../img/city.jpg") fixed center center;
+  background-size: cover;
+  padding: 60px 0;
+}
+
+.cta h3 {
+  color: #1b5fc1;
+  font-size: 52px;
+  font-weight: 700;
+}
+
+.cta p {
+  color: #fff;
+}
+
+.cta .cta-btn {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 25px;
+  transition: 0.5s;
+  margin-top: 10px;
+  border: 2px solid #1b5fc1;
+  color: #fff;
+}
+
+.cta .cta-btn:hover {
+  background: #1bbca3;
+  border: 2px solid #1bbca3;
+}
+
+
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
